# trending_videojuegos_ml

./: dockerfile  pyproject.toml  readme.md  readme.txt  requirements.txt  ñau
1.1/: 1.1.1 Introducción a Machine Learning.pptx  1.1.2 Introducción a ML.docx
1.2/: 1.2.1 Metodologías orientadas a datos.pptx
1.3/: 1.3.1 Conceptos de Algebra Lineal y su uso en ML.pptx  1.3.2 Conceptos de Algebra Lineal y su uso en ML.docx  Matrices.ipynb  Vectores.ipynb
1.4/: 1.4.2 Estadística Descriptiva para ML.docx  1.4.4 Dataframes, matplotlib.ipynb  1.4.5 Gráficos de tortas e histogramas.ipynb  1.4.6 Para_Resolver_Exploratory_Data_Analysis.ipynb
1.5/: 1.5.3 KNN como estrategia general.pptx  1.5.4 K-NN imputer.ipynb  1.5.5 Estrategías para tratamiento de missing value.docx
1.6/: 1.6.1 Escalamiento y Encoding.pptx  1.6.1 Escalamiento y Encoding.pptx - Shortcut.lnk  1.6.2 Scaling y Encoding.ipynb  1.6.2 Scaling y Encoding.ipynb - Shortcut.lnk  1.6.3 Escalamiento y Encoding.docx  1.6.3 Escalamiento y Encoding.docx - Shortcut.lnk
1.7/: 1.7.1 Tareas de Regresión para modelos predictivos y sus métricas.pptx  1.7.2 Tareas de Regresión para modelos predictivos y sus métricas.docx  1.7.4 Regresión polinomial.ipynb  1.7.5 Lasso y árboles de regresión.ipynb
2.1/: 2.1.1 La Clasificación.pptx  2.1.2 Ejemplo_Clasificación.ipynb  2.1.3 Regresión Logística.pptx  2.1.4 Implementar_Regresión_Logística.ipynb  2.1.5 Implementar_Regresión_Logística_resuelto.ipynb  2.1.6 Regresión Logística.docx
2.2/: 2.2.1 Análisis de correlación.pptx  2.2.2 Selección_de_características.ipynb  (+3 more)
Examen_1/: Limpieza.ipynb  (+3 more)
PROYECTO/trenging-videojuegos/: README.md  pyproject.toml
PROYECTO/trenging-videojuegos/conf/base/: catalog.yml
PROYECTO/trenging-videojuegos/docs/source/: analisis_gaming_trend(1).ipynb
PROYECTO/trenging-videojuegos/src/trenging_videojuegos/pipelines/gaming_analysis/: pipeline.py
(+37 files in other folders)
