[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "trending_videojuegos"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
trending-videojuegos = "trending_videojuegos.__main__:main"

[tool.kedro]
package_name = "trending_videojuegos"
project_name = "trending_videojuegos"
kedro_init_version = "1.0.0"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "trending_videojuegos.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "eb3e67cfc7c844e6930bbf5bad670020"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
   
[tool.pytest.ini_options]
testpaths = ["tests"]