[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "trenging_videojuegos"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=1.0.0",]

[project.scripts]
trenging-videojuegos = "trenging_videojuegos.__main__:main"

[tool.kedro]
package_name = "trenging_videojuegos"
project_name = "trenging_videojuegos"
kedro_init_version = "1.0.0"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "trenging_videojuegos.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "eb3e67cfc7c844e6930bbf5bad670020"
